# global-optimization

./: .coveragerc  .gitignore  .mypy.ini  .numba_config.yaml  .pre-commit-config.yaml  Manifest.toml  NOTES.md  Project.toml  README.md  a_targets_.mat  a_targets_no_jit.npz  nohup.out  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  results_20230814_112634.csv  sbm_20230522_093242.mat  sbm_20230523_115420.mat  sbm_20230523_120039.mat  sbm_20230608_112620.mat  sbm_mpc_no_mc_less_init.mat  sbm_mpc_no_mc_less_init_stricter.mat  sbm_rollout_no_mc_less_init.mat
.github/workflows/: ci.yml
benchmarking/: analyze.py  benchmark.py  fine-tunings.db  fine_tune.py  plot.py  plot_synthetic_results.py  requirements-benchmarking.txt  results.csv  run.py  sbm-trials-30-bemporad-discount-1.mat  sbm-trials-30-bemporad-discount-6.mat  sbm-trials-30-bemporad-discount-9-shrinking-norm.mat  sbm-trials-30-bemporad-discount-9-shrinking.mat  sbm-trials-30-bemporad-discount-9.mat  sbm_mpc_no_mc.mat  sbm_period_1.mat  sbm_period_10.mat  sbm_period_1_normalized.mat  sbm_period_5.mat  sbm_rollout.csv  sbm_rollout_eps_0.1.csv  sbm_rollout_no_mc.mat  sbm_rollout_no_mc_less_init.mat  status.py  synthetic_benchmark.py  visualize.py
benchmarking/results/: fine-tunings.db  sbm_20230522_085512.mat
benchmarking_bt/: plot.py  results.csv  run.py
examples/: bemporad_2020_fig1.jl  benchmarking.py  myopic_acquisition.py  myopic_acquisitions_examples.py  myopic_global_optimization.py  non_myopic_acquisition.py  non_myopic_global_optimization.py  non_myopic_global_optimization_1.py  non_myopic_global_optimization_2.py  nonmyopic_acquisition.py  nonmyopic_global_optimization.py  regression.py  regression_via_idw_and_rbf.py  simple_acquisition.py  simple_global_optimization.py  simple_regression.py  variance_reduction.npz  variance_reduction.py
examples_bt/: compute_myopic_acquisitions.py  myopic_acquisition.py  myopic_acquisitions_examples.py  myopic_global_optimization.py  regression_via_idw_and_rbf.py
hyperparameters/: fine_tune.py
mpc-tuning/: analyze.py  plot.py  requirements-mpc-tuning.txt  tune.py
src/: NonMyopicGlobOpt.jl  Regression.jl  Regressors.jl  TestCases.jl  Util.jl  consts.jl  regression.jl  util.jl
src/globopt/: __init__.py  myopic_acquisitions.py  nonmyopic_acquisitions.py  problems.py  regression.py  sampling.py
src/globopt/benchmarking/: optimal_acquisition.py
src/globopt/core/: algorithm_base.py  benchmark.py  display.py  functional_regression.py  jit_pso.py  problems.py  regression.py
src/globopt/core_bt/: problems.py  regression.py
src/globopt/myopic/: acquisition.py  acquisition_bt.py  (+2 more)
tests/: data_test_core.mat  data_test_myopic.mat  data_test_myopic.pkl  data_test_non_myopic.pkl  data_test_regression.pkl  test_benchmarking.py  test_core.py  test_myopic.py  test_non_myopic.py  test_nonmyopic.py  test_problems.py  test_regression.py  test_sampling.py  test_tmp.py  test_util.py
(+13 files in other folders)
