[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "globopt"
version = "0.0.0"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Myopic and Non-Myopic Global Optimization"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "joblib >= 1.2.0",
    "vpso >= 1.0.2",
]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/global-optimization"
"Bug Tracker" = "https://github.com/FilippoAiraldi/global-optimization/issues"

[tool.setuptools]
license-files = [
	"LICENSE",
]

[tool.isort]
profile = "black"
